[package]
name = "blockcrypt"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/ASDevelopers8055/blockcrypt"
description = "A library to make a basic blockchain."
authors = ["Rustacean <asdevelopers8055@gmail.com>"]
edition = "2021"

[lib]
name = "blockcrypt"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"

[profile.release]
opt-level = 3